--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,10 +3,11 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
 }
-
+apply plugin: 'kotlin-android-extensions'
 android {
     compileSdk 32
-
+    viewBinding { enabled = true }
+    dataBinding { enabled = true }
     defaultConfig {
         applicationId "com.dualtalk"
         minSdk 22
