--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,10 @@
             android:name=".View.ForgotPassword"
             android:exported="false" />
         <activity
-            android:name=".View.SiugnUp"
+            android:name=".View.SignUp"
             android:exported="false" />
         <activity
-            android:name=".View.Login"
+            android:name=".login.Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
