--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,21 +10,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DualTalk">
         <activity
-            android:name="com.dualtalk.activity.chat.ChatActivity"
-            android:exported="false">
-        </activity>
-        <activity
-            android:name="com.dualtalk.activity.main.MainActivity"
-            android:exported="false">
-        </activity>
-        <activity
-            android:name="com.dualtalk.activity.signup.SignupActivity"
+            android:name=".activity.forgotpassword.ForgotPasswordActivity"
             android:exported="false" />
         <activity
-            android:name="com.dualtalk.activity.login.LoginActivity"
+            android:name=".activity.chat.ChatActivity"
+            android:exported="false"></activity>
+        <activity
+            android:name=".activity.main.MainActivity"
+            android:exported="false"></activity>
+        <activity
+            android:name=".activity.signup.SignupActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.login.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
