--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,9 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.gms.google-services'
+    id 'kotlin-android-extensions'
 }
-apply plugin: 'kotlin-android-extensions'
+
 android {
     compileSdk 32
     viewBinding { enabled = true }
