--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //thư viện ảnh tròn
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //thư viện load ảnh từ mạng
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 }
